Fix a bug that the content behind the card can be clicked

--- a/styles/scss/searchCard.module.scss
+++ b/styles/scss/searchCard.module.scss
@@ -1,81 +1,73 @@
 @use "../scss/utils/variable" as *;
 
-.click_close_cover {
+.search_card {
   position: fixed;
-  display: flex;
-  background-color: #fff;
-  border-radius: $borderRadius;
-  color: $textPrimaryColor;
-  width: $minComputerWidth;
-  flex-direction: row;
-  height: 50%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-height: $settingHeight;
-  max-height: $settingPageWidth;
-  .search_card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: $minComputerWidth;
+  height: 60%;
+  border-radius: $borderRadius;
+  padding-top: $paddingMd;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  overflow-y: auto;
+  background-color: $secondaryColor;
+  color: $textPrimaryColor;
+
+  .error {
+    color: $errorColor;
+    margin-bottom: $marginXsm;
+  }
+  .search_card_header {
+    width: 98%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid $midGrayColor;
+    .search_input {
+      width: 100%;
+      margin: $marginXsm;
+      padding: $paddingXsm;
+      border: 1px solid $midGrayColor;
+      border-radius: $borderRadius;
+      background-color: aliceblue;
+    }
+    .close_btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  .search_card_body {
+    width: 98%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    height: auto;
-    border-radius: $borderRadius;
-    padding-top: $paddingMd;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    overflow-y: auto;
-
-    .error {
-      color: $errorColor;
-      margin-bottom: $marginXsm;
+    justify-content: center;
+    margin-top: $marginXsm;
+    .search_card_body_title {
+      margin: $marginXsm;
     }
-    .search_card_header {
-      width: 98%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid $midGrayColor;
-      .search_input {
-        width: 100%;
-        margin: $marginXsm;
-        padding: $paddingXsm;
-        border: 1px solid $midGrayColor;
-        border-radius: $borderRadius;
-        background-color: aliceblue;
-      }
-      .close_btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-    }
-    .search_card_body {
-      width: 98%;
+    .emptyResult {
+      width: 300px;
+      height: inherit;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      margin-top: $marginXsm;
-      .search_card_body_title {
-        margin: $marginXsm;
-      }
-      .emptyResult {
-        width: 300px;
-        height: inherit;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      .searchResult {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        .showAllBtn {
-          color: $primaryColor;
-        }
+      margin-top: $marginLg;
+    }
+    .searchResult {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      .showAllBtn {
+        color: $primaryColor;
       }
     }
   }
